@@ -4,12 +4,15 @@ import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
 import io.jsonwebtoken.security.Keys;
+import com.perm.models.user.Utilisateur;
+import com.perm.models.user.Admin;
+import com.perm.models.user.Moniteur;
+import com.perm.models.user.Client;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.User;
 import org.springframework.stereotype.Component;
 
 import javax.crypto.SecretKey;
@@ -31,7 +34,8 @@ public class JwtTokenProvider {
     }
 
     public String generateToken(Authentication authentication) {
-        User principal = (User) authentication.getPrincipal();
+        CustomUserDetails userDetails = (CustomUserDetails) authentication.getPrincipal();
+        Utilisateur utilisateur = userDetails.getUtilisateur();
         Date now = new Date();
         Date expiryDate = new Date(now.getTime() + jwtExpirationInMs);
 
@@ -40,8 +44,11 @@ public class JwtTokenProvider {
                 .collect(Collectors.joining(","));
 
         return Jwts.builder()
-                .setSubject(principal.getUsername())
+                .setSubject(utilisateur.getEmail())
                 .claim("roles", authorities)
+                .claim("nom", utilisateur.getNom())
+                .claim("prenom", utilisateur.getPrenom())
+                .claim("telephone", utilisateur.getTelephone())
                 .setIssuedAt(new Date())
                 .setExpiration(expiryDate)
                 .signWith(jwtSecret)
@@ -58,9 +65,32 @@ public class JwtTokenProvider {
         Collection<? extends GrantedAuthority> authorities =
                 Arrays.stream(claims.get("roles").toString().split(","))
                         .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+                        .toList();
 
-        User principal = new User(claims.getSubject(), "", authorities);
+        // Create a concrete implementation based on the role
+        Utilisateur utilisateur;
+        String role = authorities.iterator().next().getAuthority();
+        switch (role) {
+            case "ROLE_ADMIN":
+                utilisateur = new Admin();
+                break;
+            case "ROLE_MONITEUR":
+                utilisateur = new Moniteur();
+                break;
+            case "ROLE_CLIENT":
+                utilisateur = new Client();
+                break;
+            default:
+                throw new IllegalStateException("Unexpected role: " + role);
+        }
+
+        // Set common properties
+        utilisateur.setEmail(claims.getSubject());
+        utilisateur.setNom((String) claims.get("nom"));
+        utilisateur.setPrenom((String) claims.get("prenom"));
+        utilisateur.setTelephone((String) claims.get("telephone"));
+
+        CustomUserDetails principal = new CustomUserDetails(utilisateur);
         return new UsernamePasswordAuthenticationToken(principal, token, authorities);
     }
 
